# cppmarkup

./: .clang-format  .gitignore  CMakeLIsts.txt  README.md
include/kangsw/: markup.hxx
include/kangsw/markup/: macros.hxx  marshal_default.hxx  types.hxx
include/kangsw/markup/marshal/: generic_marshaling.hxx  generics.hxx  json.hxx
include/kangsw/markup/marshal/details/: generics.hxx  jsmn.h  json_dump.hxx  json_object_from_stream.hxx  json_parse.hxx  json_parser_stream.hxx  strutils.hxx  trivial_marshal.hxx
include/kangsw/markup/reflection/: dynamic_object.hpp  object.hxx  object_container_interface.hxx  object_traits.hxx  property.hxx  property_proxy.hxx  static_object_base.hxx
include/kangsw/markup/utility/: base64.hxx  template_utils.hxx
include/kangsw/refl/: dynamic_object.hpp  object.hpp  object.hxx  object_traits.hpp  object_traits.hxx  property.hpp  property.hxx  static_object_base.hpp  static_object_base.hxx  types.hpp  types.hxx
old/cppmarkup/: container_proxy.hxx  hash.hpp  impl_macros.hpp  marshal_json.hpp  object.hpp  template_utils.hxx  typedefs.hpp
old/tests/: test-object-new.cpp  test-object.cpp  test-types.cpp
src/: cppmarkup.hpp  cppmarkup_object.hpp  marshal_defaults.cpp  marshal_json.cpp  object.cpp
src/cppmarkup/: base64.hxx  container_proxy.hxx  cppmarkup.hpp  hash.hpp  helper.hxx  impl_macros.hpp  marshal_defaults.cpp  marshal_defaults.hpp  marshal_json.cpp  marshal_json.hpp  marshal_utils.hxx  object.cpp  object.hpp  object_array_proxy.hpp  object_container_proxy.hxx  template_utils.hxx  typedefs.hpp
src/ezdata/: datautils.hpp  object.hpp  object.hxx
src/kangsw/: markup.hpp
src/kangsw/markup/: base64.hxx  object.hpp  object_traits.hpp  property.hpp  template_utils.hxx  types.hpp
tests/: CMakeLists.txt  poc-static_inline.cpp
tests/automation/: catch.hpp  doctest.h  test-base64.cpp  test-common-type.hpp  test-marshal-json.cpp  test-marshal_json.cpp  test-object.cpp  test-property_proxy.cpp  test-property_proxy_marshal_defaults.cpp  test-static_object.cpp  test-types.cpp  test_type.hxx
third/: CMakeLists.txt
third/json-3.9.1/: CMakeLists.txt
